[gd_scene load_steps=8 format=3 uid="uid://dq2rmlosx43ut"]

[ext_resource type="Script" path="res://Scripturi/power_generator.gd" id="1_qtg7l"]
[ext_resource type="Texture2D" uid="uid://ba2nv6gucowxv" path="res://Sprout Lands - Sprites - Basic pack/Objects/power_gen.png" id="1_xoksc"]
[ext_resource type="PackedScene" uid="uid://bgc7bfs3whjaw" path="res://User/slot_container.tscn" id="3_fyji2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ehhw"]
size = Vector2(24, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nelsw"]
size = Vector2(28, 19)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqxst"]
bg_color = Color(0.972549, 0, 0.12549, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_lp3bv"]
radius = 137.0

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource("1_qtg7l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_1ehhw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_xoksc")

[node name="area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_nelsw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SlotContainer" parent="CanvasLayer" instance=ExtResource("3_fyji2")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
slot_type = "no_inv"

[node name="Label" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.408
anchor_right = 0.5
anchor_bottom = 0.408
offset_left = -34.0
offset_top = -11.384
offset_right = 34.0
offset_bottom = 11.616
grow_horizontal = 2
grow_vertical = 2
text = "Add Fuel"

[node name="Label2" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.379
anchor_right = 0.5
anchor_bottom = 0.379
offset_left = -20.0
offset_top = -11.592
offset_right = 20.0
offset_bottom = 11.408

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 42.0
offset_right = 32.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.552
anchor_top = 0.529
anchor_right = 0.552
anchor_bottom = 0.529
offset_left = -2.90405
offset_top = -48.792
offset_right = 89.0959
offset_bottom = 49.208
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_nqxst")
fill_mode = 3

[node name="Button3" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.643
anchor_right = 0.5
anchor_bottom = 0.643
offset_left = -33.0
offset_top = -15.664
offset_right = 31.0
offset_bottom = 15.336
grow_horizontal = 2
grow_vertical = 2
text = "Stop
"

[node name="Timer" type="Timer" parent="."]

[node name="area_interact" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_interact"]
shape = SubResource("CircleShape2D_lp3bv")

[connection signal="body_entered" from="area" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="area_interact" to="." method="_on_area_interact_area_entered"]
